[gd_scene load_steps=9 format=3 uid="uid://c83eaisu5kaeo"]

[ext_resource type="Script" path="res://scripts/levels/7-2_dialogue.gd" id="1_m8yu4"]
[ext_resource type="Texture2D" uid="uid://dawdg5sco2g18" path="res://assets/images/wip/gainEquation.png" id="2_g5lj8"]
[ext_resource type="Texture2D" uid="uid://dpjbktuhq51cb" path="res://assets/images/background/swampenvironment.png" id="2_gck45"]
[ext_resource type="Texture2D" uid="uid://dhaj7ugamct2f" path="res://assets/images/dialogue/messageBox.png" id="3_r65n5"]
[ext_resource type="Theme" uid="uid://bajr2k60ueqkc" path="res://assets/themes/headerTheme.tres" id="4_l8cpm"]

[sub_resource type="Animation" id="Animation_a5gqd"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4hiwk"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rem3y"]
_data = {
"Fade": SubResource("Animation_a5gqd"),
"RESET": SubResource("Animation_4hiwk")
}

[node name="FinalReview" type="Node2D"]
script = ExtResource("1_m8yu4")

[node name="GainEquation" type="CanvasLayer" parent="."]
layer = 128

[node name="GainEquation" type="TextureRect" parent="GainEquation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 878.0
offset_top = 928.0
offset_right = -786.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g5lj8")
stretch_mode = 4

[node name="Backgrounds" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="Backgrounds"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gck45")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Backgrounds"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 0.392157)
metadata/_edit_use_anchors_ = true

[node name="Message" type="TextureRect" parent="Backgrounds"]
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.113
anchor_right = 0.844
anchor_bottom = 0.298
offset_top = -0.0400085
offset_bottom = -0.039978
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r65n5")

[node name="Label" type="Label" parent="Backgrounds/Message"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_l8cpm")
text = "FINAL REVIEW"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScreenTransition" type="CanvasLayer" parent="."]
layer = 50

[node name="FadeScreen" type="ColorRect" parent="ScreenTransition"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition/FadeScreen"]
libraries = {
"": SubResource("AnimationLibrary_rem3y")
}
